syntax = "proto3";

package message;

// 订单请求参数
message OrderRequest {
    string orderId = 1;
    int64 timeStamp = 2;
}

message OrderInfo {
    string OrderId = 1;
    string OrderName = 2;
    string OrdreStatus = 3;
}

// 订单服务  protoc --go_out=plugins=grpc:. *.proto
// 如： protoc --go_out=plugins=grpc:. message.proto
service OrderService{
    rpc GetOrderInfo(OrderRequest) returns (OrderInfo);
}